--- a/css/styles.css
+++ b/css/styles.css
@@ -52,14 +52,17 @@ ul {
 .amenu{
     text-decoration: none;
     color: white;
-    background-color: rgb(92, 54, 54);
+    background-color: rgb(95, 55, 55);
     border: 2px solid rgb(134, 76, 76);
     border-radius: 4px;
-    transition: all 0.3s ease;
+    display: inline-block;
+    padding: 5px 10px;
+    transition: transform 0.3s ease;
 }
 
-.amenu:hover{
-    transform: scale(1.1) rotate(2deg);
+.amenu:hover {
+    transform: rotate(3deg);
+    background-color: rgb(217, 139, 139);
 }
 
 .aordo{
@@ -67,11 +70,14 @@ ul {
     color: inherit;
     background-color: rgb(216, 216, 216);
     border-radius: 40px;
-    transition: all 0.3s ease;
+    display: inline-block;
+    padding: 5px 10px;
+    transition: transform 0.3s ease;
 }
 
-.aordo:hover{
-    transform: scale(1.1) rotate(2deg);
+.aordo:hover {
+    transform: rotate(2deg);
+    background-color: rgb(180, 180, 180);
 }
 
 
@@ -82,6 +88,8 @@ h5{
 
 .form_patients{
     margin-left: 800px;
+    width: 300px;
+    background-color: pink;
 }
 
 .liste_patients{
