--- a/css/styles.css
+++ b/css/styles.css
@@ -42,18 +42,18 @@ ul {
 
 .menu{
     padding: 5px 5px;
-    background-color: rgb(185, 102, 102);
+    background-color: rgb(102, 175, 185);
     list-style-type: none;
     cursor: pointer;
     border-radius: 4px;
-    box-shadow: 0px 8px 8px rgb(231, 127, 127);
+    box-shadow: 0px 8px 8px rgb(127, 224, 231);
 }
 
 .amenu{
     text-decoration: none;
     color: white;
-    background-color: rgb(95, 55, 55);
-    border: 2px solid rgb(134, 76, 76);
+    background-color: rgb(55, 92, 95);
+    border: 2px solid rgb(76, 127, 134);
     border-radius: 4px;
     display: inline-block;
     padding: 5px 10px;
@@ -62,7 +62,7 @@ ul {
 
 .amenu:hover {
     transform: rotate(3deg);
-    background-color: rgb(217, 139, 139);
+    background-color: rgb(139, 217, 217);
 }
 
 .aordo{
@@ -86,11 +86,79 @@ h5{
     margin-left: 100px;
 }
 
-.form_patients{
-    margin-left: 800px;
+.form-patient {
+    background-color: #e0f0ff;
     width: 400px;
-    background-color: rgb(255, 177, 216) !important;
-    border-radius: 20px;
+    margin: 20px auto;
+    padding: 15px;
+    border: 2px solid #aaccee;
+    border-radius: 10px;
+    font-family: Arial, sans-serif;
+}
+
+.form-patient h3 {
+    text-align: center;
+    color: #336699;
+    margin-bottom: 15px;
+    text-decoration: underline;
+}
+
+.form-group {
+    margin-bottom: 10px;
+}
+
+.form-group label {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 3px;
+    color: #333;
+}
+
+.form-group input {
+    width: 100%;
+    padding: 5px;
+    border: 1px solid #999;
+    border-radius: 5px;
+}
+
+.form-group input:focus {
+    border-color: #66aaff;
+    background-color: #f5f9ff;
+}
+
+.form-row {
+    display: flex;
+    gap: 10px;
+}
+
+.form-row .form-group {
+    flex: 1;
+}
+
+.btn-ajouter {
+    background-color: #6699cc;
+    color: white;
+    border: none;
+    padding: 8px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+.btn-ajouter:hover {
+    background-color: #5588bb;
+}
+
+@media (max-width: 500px) {
+    .form-patient {
+        width: 90%;
+    }
+    
+    .form-row {
+        flex-direction: column;
+        gap: 5px;
+    }
 }
 
 .liste_patients{
